sas-core/main/default/objects/FrequentFlyer__x/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <description>First line if a customers physical address</description>
    <externalDeveloperName>AddressLine1</externalDeveloperName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>