sas-core/main/default/objects/FrequentFlyer__x/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>Second line if a customers physical address</description>
    <externalDeveloperName>HomeAddressLine2</externalDeveloperName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>