sas-core/main/default/objects/FrequentFlyer__x/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <description>Third line of a customers physical address</description>
    <externalDeveloperName>addressLine3</externalDeveloperName>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>