sas-core/main/default/objects/FrequentFlyer__x/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Birth Date of customer</description>
    <externalDeveloperName>BirthDate</externalDeveloperName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>