sas-core/main/default/objects/FrequentFlyer__x/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of customer</description>
    <externalDeveloperName>city</externalDeveloperName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>