sas-core/main/default/objects/FrequentFlyer__x/fields/ConcentEB__c.field-meta.xml
<CustomField>
    <fullName>ConcentEB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given concent to EuroBonus</description>
    <externalDeveloperName>concentEB</externalDeveloperName>
    <inlineHelpText>Indicates that customer has given concent to EuroBonus</inlineHelpText>
    <label>Concent EuroBonus</label>
    <type>Checkbox</type>
</CustomField>