sas-core/main/default/objects/FrequentFlyer__x/fields/ConcentEmail__c.field-meta.xml
<CustomField>
    <fullName>ConcentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given concent to receive Email</description>
    <externalDeveloperName>concentEmail</externalDeveloperName>
    <inlineHelpText>Indicates that customer has given concent to receive Email</inlineHelpText>
    <label>Concent Email</label>
    <type>Checkbox</type>
</CustomField>