sas-core/main/default/objects/FrequentFlyer__x/fields/ConcentSMS__c.field-meta.xml
<CustomField>
    <fullName>ConcentSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given concent to receive SMS</description>
    <externalDeveloperName>concentSMS</externalDeveloperName>
    <inlineHelpText>Indicates that customer has given concent to receive SMS</inlineHelpText>
    <label>Concent SMS</label>
    <type>Checkbox</type>
</CustomField>