sas-core/main/default/objects/FrequentFlyer__x/fields/ConsentEB0__c.field-meta.xml
<CustomField>
    <fullName>ConsentEB0__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has not given consent to EuroBonus, but to having a SAS portal account</description>
    <externalDeveloperName>ConsentEB0</externalDeveloperName>
    <inlineHelpText>Indicates that customer has not given consent to EuroBonus, but to having a SAS portal account</inlineHelpText>
    <label>Consent EuroBonus0</label>
    <type>Checkbox</type>
</CustomField>