sas-core/main/default/objects/FrequentFlyer__x/fields/ConsentEmail__c.field-meta.xml
<CustomField>
    <fullName>ConsentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given consent to receive Email</description>
    <externalDeveloperName>consentEmail</externalDeveloperName>
    <inlineHelpText>Indicates that customer has given consent to receive Email</inlineHelpText>
    <label>Consent Email</label>
    <type>Checkbox</type>
</CustomField>