sas-core/main/default/objects/FrequentFlyer__x/fields/ConsentSMS__c.field-meta.xml
<CustomField>
    <fullName>ConsentSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given consent to receive SMS</description>
    <externalDeveloperName>ConsentSMS</externalDeveloperName>
    <inlineHelpText>Indicates that customer has given consent to receive SMS</inlineHelpText>
    <label>Consent SMS</label>
    <type>Checkbox</type>
</CustomField>