sas-core/main/default/objects/FrequentFlyer__x/fields/ConsentTelemarketing__c.field-meta.xml
<CustomField>
    <fullName>ConsentTelemarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given consent to Telemarketing</description>
    <externalDeveloperName>consentTelemarketing</externalDeveloperName>
    <inlineHelpText>Indicates that customer has given consent to Telemarketing</inlineHelpText>
    <label>Consent Telemarketing</label>
    <type>Checkbox</type>
</CustomField>