sas-core/main/default/objects/FrequentFlyer__x/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>Country of customer</description>
    <externalDeveloperName>CountryCode</externalDeveloperName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>