sas-core/main/default/objects/FrequentFlyer__x/fields/CountyState__c.field-meta.xml
<CustomField>
    <fullName>CountyState__c</fullName>
    <description>County or state that customer lives in</description>
    <externalDeveloperName>HomeCountyState</externalDeveloperName>
    <label>County/State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>