sas-core/main/default/objects/FrequentFlyer__x/fields/EBBalance__c.field-meta.xml
<CustomField>
    <fullName>EBBalance__c</fullName>
    <description>EuroBonus Balance of customer</description>
    <externalDeveloperName>euroBonusBalance</externalDeveloperName>
    <label>EuroBonus Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>