sas-core/main/default/objects/FrequentFlyer__x/fields/EBMbrshipLvlStatusEndDate__c.field-meta.xml
<CustomField>
    <fullName>EBMbrshipLvlStatusEndDate__c</fullName>
    <description>End of current status level for customer&#39;s EuroBonus engagement</description>
    <externalDeveloperName>MbrshipLvlStatusEndPeriod</externalDeveloperName>
    <label>EB Level End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>