sas-core/main/default/objects/FrequentFlyer__x/fields/EBMbrshipLvlStatusStartDate__c.field-meta.xml
<CustomField>
    <fullName>EBMbrshipLvlStatusStartDate__c</fullName>
    <description>Start of membership level for customer EuroBonus engagement</description>
    <externalDeveloperName>MbrshipLvlStatusStartPeriod</externalDeveloperName>
    <label>EB Level Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>