sas-core/main/default/objects/FrequentFlyer__x/fields/EBNumber__c.field-meta.xml
<CustomField>
    <fullName>EBNumber__c</fullName>
    <description>EuroBonus Number of customer</description>
    <externalDeveloperName>euroBonusNumber</externalDeveloperName>
    <label>EuroBonus Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>