sas-core/main/default/objects/FrequentFlyer__x/fields/EBQualifyingPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>EBQualifyingPeriodEndDate__c</fullName>
    <description>End of qualifying period for customer EuroBonus engagement</description>
    <externalDeveloperName>MbrshipLvlStatusEndPeriod</externalDeveloperName>
    <label>Qualifying Period End</label>
    <type>Date</type>
</CustomField>