sas-core/main/default/objects/FrequentFlyer__x/fields/EBQualifyingPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>EBQualifyingPeriodStartDate__c</fullName>
    <description>Start of qualifying period for customer EuroBonus engagement</description>
    <externalDeveloperName>MbrshipLvlStatusStartPeriod</externalDeveloperName>
    <label>Qualifying Period Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>