sas-core/main/default/objects/FrequentFlyer__x/fields/EBReachesNextLevelPoints__c.field-meta.xml
<CustomField>
    <fullName>EBReachesNextLevelPoints__c</fullName>
    <description>Number of EuroBonus points the customer needs to reach the next level</description>
    <externalDeveloperName>basicPointsRequiredForHigerLevel</externalDeveloperName>
    <label>Reaches Next Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>