sas-core/main/default/objects/FrequentFlyer__x/fields/EmailPersonal__c.field-meta.xml
<CustomField>
    <fullName>EmailPersonal__c</fullName>
    <description>Personal email to customer</description>
    <externalDeveloperName>VirtualAddressLineEmail</externalDeveloperName>
    <label>Email - Personal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>