sas-core/main/default/objects/FrequentFlyer__x/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender of customer</description>
    <externalDeveloperName>Gender</externalDeveloperName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>