sas-core/main/default/objects/FrequentFlyer__x/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last Name of customer</description>
    <externalDeveloperName>LastName</externalDeveloperName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>