sas-core/main/default/objects/FrequentFlyer__x/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <description>Middle Name of customer</description>
    <externalDeveloperName>MiddleName</externalDeveloperName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>