sas-core/main/default/objects/FrequentFlyer__x/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile phone number of customer</description>
    <externalDeveloperName>HomeMobile</externalDeveloperName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>