sas-core/main/default/objects/FrequentFlyer__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Full name of customer</description>
    <externalDeveloperName>FullName</externalDeveloperName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>