sas-core/main/default/objects/FrequentFlyer__x/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <description>Unique identifier for customer&#39;s subscription engagement</description>
    <externalDeveloperName>subscriptionID</externalDeveloperName>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>