sas-core/main/default/objects/FrequentFlyer__x/fields/TPAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>TPAccountNumber__c</fullName>
    <description>Unique identifier for customer&#39;s Travel Pass account</description>
    <externalDeveloperName>TravelPassAccountNumber</externalDeveloperName>
    <label>Travel Pass Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>