sas-core/main/default/objects/FrequentFlyer__x/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>Zip Code of customer</description>
    <externalDeveloperName>ZipCode</externalDeveloperName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>